Presa in carico SMS, lavorazione SMS ok
