# src/main/java/it/pagopa/pn/ec/repositorymanager/model/entity/DigitalProgressStatus.java
@@ -1,6 +1,5 @@
 package it.pagopa.pn.ec.repositorymanager.model.entity;
 
-import it.pagopa.pn.ec.rest.v1.dto.DigitalRequestStatus;
 import lombok.AccessLevel;
 import lombok.Data;
 import lombok.NoArgsConstructor;
@@ -16,7 +15,7 @@ import java.time.OffsetDateTime;
 public class DigitalProgressStatus {
 
 	private OffsetDateTime eventTimestamp;
-	private DigitalRequestStatus status;
+	private String status;
 	private String eventCode;
 	private String eventDetails;
 	private GeneratedMessage generatedMessage;
